--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <meta name="theme-color" content="#EF5350" />
-  <title>Starter Template - Materialize</title>
+  <title>Dash</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,41 +18,43 @@
 
 <body>
   <div class="navbar-fixed">
-  <nav class="red lighten-1" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Dash</a>
-      <ul id="navId" class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Scheduled Runs</a></li>
-        <li><a href="#">Run Log</a></li>
-        <li><a href="#">Food Diary</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
+    <nav class="red lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo">Dash</a>
+        <ul id="navId" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="future.html">Scheduled Runs</a></li>
+          <li><a href="past.html">Run Log</a></li>
+          <li><a href="diary.html">Food Diary</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="side-nav">
-        <div id="sidebar-header">
-          <div class="row">
-            <div class="col sm5">
-              <img class="profile-thumbnail circle" src="img/shoe-final.jpg" height=40 width=40>
-            </div>
-            <div class="acct-info col sm7">
-              <h6>Eva Person
+        <ul id="nav-mobile" class="side-nav">
+          <div id="sidebar-header">
+            <div class="row">
+              <div class="col sm5">
+                <img class="profile-thumbnail circle" src="img/shoe-final.jpg" height=40 width=40>
+              </div>
+              <div class="acct-info col sm7">
+                <h6>Eva Person
                 <p>
                   <small>eva.person@domain.com</small> 
                 </p>
               </h6>
+              </div>
             </div>
           </div>
-        </div>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Scheduled Runs</a></li>
-        <li><a href="#">Run Log</a></li>
-        <li><a href="diary.html">Food Diary</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="future.html">Scheduled Runs</a></li>
+          <li><a href="past.html">Run Log</a></li>
+          <li><a href="diary.html">Food Diary</a></li>
+          <li><a href="plan.html">Plan a Run</a></li>
+          <li><a href="goals.html">Goals & Progress</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
   </div>
 
 
@@ -62,12 +64,12 @@
       <div class="col s12">
       </div>
       <div class="col s12">
-        <div class="card-panel center-align">
-          
+        <a href="graphs.html"><div class="card center-align">
+
           <div class="row">
             <i class="material-icons">transfer_within_a_station</i>
             <h5>Today's Stats</h5>
-            
+
             <div class="col s6">
               <h6>Distance</h6>
               <h5>20 km</h5>
@@ -77,35 +79,42 @@
               <h5>300</h5>
             </div>
           </div>
-        </div>
+          <div class="card-action" id="homecard">
+        <a id="homelink" href="graphs.html">Detailed Stats</a>
       </div>
+        </div>
+      </div></a>
       <div class="col s6">
         <div class="card-panel center-align">
           <a href="plan.html">
-             <i class="material-icons">directions_run</i>
-             <h5>Plan a Run</h5>
+            <i class="material-icons">directions_run</i>
+            <h5>Plan a Run</h5>
           </a>
         </div>
       </div>
       <div class="col s6">
         <a href="diary.html">
           <div class="card-panel center-align">
-          <i class="material-icons">restaurant</i>
-          <h5>Food Diary</h5>
-        </div>
+            <i class="material-icons">restaurant</i>
+            <h5>Food Diary</h5>
+          </div>
         </a>
       </div>
       <div class="col s6">
-        <div class="card-panel center-align">
-          <i class="material-icons">trending_up</i>
-          <h5>Goals</h5>
-        </div>
+        <a href="goals.html">
+          <div class="card-panel center-align">
+            <i class="material-icons">trending_up</i>
+            <h5>Goals</h5>
+          </div>
+        </a>
       </div>
       <div class="col s6">
-        <div class="card-panel center-align">
-          <i class="material-icons">chrome_reader_mode</i>
-          <h5>Past Runs</h5>
-        </div>
+        <a href="past.html">
+          <div class="card-panel center-align">
+            <i class="material-icons">chrome_reader_mode</i>
+            <h5>Past Runs</h5>
+          </div>
+        </a>
       </div>
     </div>
   </div>
